--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/mystyle.css">
+    <script src="js/myfunction.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -14,6 +15,11 @@
     </div>
     <div id="menu">
         menu
+        <ul>
+            <li><a href="#" onclick="loadDoc('page1.html')">Page1</a></li>
+            <li><a href="#" onclick="loadDoc('page2.html')">Page2</a></li>
+            <li><a href="#" onclick="loadDoc('page3.html')">Page3</a></li>
+        </ul>
     </div>
     <div id="content">
         Here is the content
