add content into css, js, menu, page2, page3

--- a/page1.html
+++ b/page1.html
@@ -1,4 +1,13 @@
-<h1>First page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>page 1</title>
+    <link rel="stylesheet" href="css/mystyle.css">
+</head>
+<body>
+    <h1>First page</h1>
 <p>
     Some examples about html.
 </p>
@@ -37,3 +46,5 @@
     <!-- <a href="http://www.oamk.fi" target="_blank">OAMK</a> -->
     <a href="http://www.oamk.fi">OAMK</a>
 </p>
+</body>
+</html>
