--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,13 @@
-
-<h2>Page2</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/mystyle.css">
+	<title>page 2</title>
+</head>
+<body>
+	<h2>Page2</h2>
 
 	<form class="myforms" id="sourceForm" >
 	  <p>
@@ -25,4 +33,5 @@
 	  <input type="text" id="target_phone" name="" value="">
 
 	</form>
-
+</body>
+</html>
