--- a/menu.html
+++ b/menu.html
@@ -18,6 +18,7 @@
             <li><a href="#" onclick="loadDoc('page1.html')">Page1</a></li>
             <li><a href="#" onclick="loadDoc('page2.html')">Page2</a></li>
             <li><a href="#" onclick="loadDoc('page3.html')">Page3</a></li>
+            <li><a href="#" onclick="loadDoc('forms.html')">Form</a></li>
         </ul>
     </div>
     <div id="content">
